"border: collapse" + "display: none" rows in the tbody while having thead or tfoot doesn't render the opposite border https://bugs.webkit.org/show_bug.cgi?id=67877

Patch by Arpita Bahuguna <arpitabahuguna@gmail.com> on 2012-05-16
Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/css/table-collapsed-borders.html

* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::computeCollapsedBeforeBorder):
When getting the previous row group's after border, pass SkipEmptySections as the second param
to the RenderTable::sectionAbove() call. Thus if the currSection is the top most section of the
table passing SkipEmptySections to sectionAbove() would return null which should be the expected
behavior.

(WebCore::RenderTableCell::computeCollapsedAfterBorder):
When getting the following row group's before border, pass SkipEmptySections as the second param
to the RenderTable::sectionBelow() call. Thus if the currSection is the bottom most section of the
table passing SkipEmptySections to sectionBelow() would return null which should be the expected
behavior.

LayoutTests:

* fast/css/table-collapsed-borders-expected.html: Added.
* fast/css/table-collapsed-borders.html: Added.
Added new reftest for testing table with collapsed borders.

Canonical link: https://commits.webkit.org/104203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117271 268f45cc-cd09-0410-ab3c-d52691b4dbfc